feat: add image to index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prova!</h1>
-    <p>Prova 1</p>
+    <h1>Demon Slayer</h1>
+    <p>Shinobu</p>
+
+    <img src="img/shinobu.jpg" alt="personaggio anime demon slayer">
 </body>
 </html>
